Refine inactive tab appearance: top-border, background color & text color

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -84,16 +84,17 @@
       #footer {
         padding: 8px 20px;
       }
-      .nav-tabs li {
-        border-top: 2px solid black;
-      }
       .nav-tabs .nav-item .nav-link {
-        background-color: white;
-        color: black;
+        background-color: #ecffff;
         text-decoration: none;
+        color: #394554;
         border: none;
+        border-radius: 0;
+        margin-bottom: -1px;
       }
       .nav-tabs .nav-item .nav-link.active {
+        color: black;
+        border-top: 2px solid black;
         background-color: #dff5f9;
       }
       .tab-pane {
@@ -168,7 +169,7 @@
       }
       #sidebar, #sidebar-tab { background-color: #dff5f9; }
       #sidebar-tabs { background-color: #bfeaf4;}
-      #sidebar-tab { float: left; border-top: 2px solid black; }
+      #sidebar-tab { float: left; }
       .form-control { border-radius: 0px; }
       select {
         -moz-appearance: none;
