More accurate centering of upload-spinner

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -198,6 +198,7 @@
       #upload-spinner {
         width: 50px;
         height: 50px;
+        margin-left: -25px;
         position: absolute;
         left: 50%;
         top: 45%;
