Different placeholders in text box for each input tab

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -413,8 +413,8 @@
 
         <div id="text-box-wrapper">
           <textarea class="form-control dropzone dropzone-border" rows="20" name="text" id="text"
-          data-i18n="[placeholder]text-box-placeholder"
-          placeholder='Kopioi teksti tähän ja paina “Anna aihe-ehdotukset”-nappia'></textarea>
+          data-i18n="[placeholder]text-box-placeholder-text-input"
+          ></textarea>
           <button id="button-clear" type="button" class="btn btn-danger">&#x2715;</button>
           <div id="text-box-background" class="dropzone">
             <!-- Icon license: https://github.com/twbs/icons/blob/main/LICENSE.md -->
