Slightly fainter border between tabs

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -98,8 +98,8 @@
         white-space: nowrap;
       }
       .nav-middle-tab {
-        border-left: 1px solid gray;
-        border-right: 1px solid gray;
+        border-left: 1px solid darkgray;
+        border-right: 1px solid darkgray;
       }
       .nav-tabs .nav-item .nav-link.active {
         color: black;
