Use Bootstrap alert for not supported formats

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -110,6 +110,11 @@
         background-color: #dff5f9;
         padding: 15px 15px 0px;
       }
+      .alert {
+        margin: 15px 0px 10px;
+        border-radius: 0;
+        font-weight: bold;
+      }
       #tab-text-input {
         padding: 0px;
       }
@@ -409,6 +414,9 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="alert alert-danger d-none" id="alert-not-supported-format" data-i18n="alert-not-supported-format">
+          Tämä tiedostomuoto ei ole tuettu.
         </div>
 
         <div id="text-box-wrapper">
