Use Bootstrap alert for failed text extraction

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -418,6 +418,9 @@
         <div class="alert alert-danger d-none" id="alert-not-supported-format" data-i18n="alert-not-supported-format">
           Tämä tiedostomuoto ei ole tuettu.
         </div>
+        <div class="alert alert-danger d-none" id="alert-textract-request-failed" data-i18n="alert-textract-request-failed">
+          Tekstin haku epäonnistui.
+        </div>
 
         <div id="text-box-wrapper">
           <textarea class="form-control dropzone dropzone-border" rows="20" name="text" id="text"
