Use Bootstrap alert for too big file case

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -421,6 +421,9 @@
         <div class="alert alert-danger d-none" id="alert-textract-request-failed" data-i18n="alert-textract-request-failed">
           Tekstin haku epäonnistui.
         </div>
+        <div class="alert alert-danger d-none" id="alert-too-big-file" data-i18n="alert-too-big-file">
+          Liian suuri tiedosto; suurin sallittu tiedoston koko on 50 MB
+        </div>
 
         <div id="text-box-wrapper">
           <textarea class="form-control dropzone dropzone-border" rows="20" name="text" id="text"
