Change Annif version text

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -353,8 +353,8 @@
           talleteta.  Palvelun käyttöä seurataan ja tilastoidaan palvelun
           kehittämiseksi. </span>
           <a href="#" id="accessibility-statement" data-i18n="accessibility-statement">Tutustu saavutettavuusselosteeseen.</a>.
-          <span data-i18n="powered-by">Voimanlähteenä </span>
-          <a href="https://www.annif.org"><img src="static/img/annif-RGB-white.svg" id="annif-logo" alt="Annif"></a>
+          <span data-i18n="[html]powered-by">Perustuu <a href="https://www.annif.org">Annifin</a> versioon </span>
+          <span id="annif-version"></span>
         </p>
       </div>
     </div>
