Add Annif version information (#11)
* Add Annif version info

* Change version text

* Add version as text

* Change Annif version text

* Remove Annif logo

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -298,14 +298,6 @@
       #copy-button-label-and-uri {
         background: url("static/img/clipboard-label-http.svg");
       }
-      #annif-logo {
-        width: 70px;
-        margin-bottom: 8px;
-        margin-left: -3px;
-      }
-      #annif-logo:hover {
-        opacity: 0.90;
-      }
       meter { width: 24px; }
       meter::-webkit-meter-bar {
         border: none;
@@ -507,8 +499,8 @@
           talleteta.  Palvelun käyttöä seurataan ja tilastoidaan palvelun
           kehittämiseksi. </span>
           <a href="#" id="accessibility-statement" data-i18n="accessibility-statement">Tutustu saavutettavuusselosteeseen.</a>.
-          <span data-i18n="powered-by">Voimanlähteenä </span>
-          <a href="https://www.annif.org"><img src="static/img/annif-RGB-white.svg" id="annif-logo" alt="Annif"></a>
+          <span data-i18n="[html]powered-by">Perustuu <a href="https://www.annif.org">Annifin</a> versioon </span>
+          <span id="annif-version"></span>
         </p>
       </div>
     </div>
