Add more informative error message for failed URL extraction

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="static/css/bootstrap.min.css">
-    
+
     <!-- Fira Sans font -->
     <link rel="stylesheet" href="static/css/fonts.css">
 
@@ -26,7 +26,7 @@
     <meta property="og:image" content="https://raw.githubusercontent.com/NatLibFi/FintoAI/master/ai.finto.fi/static/img/finto-ai-social.png">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:image" content="https://raw.githubusercontent.com/NatLibFi/FintoAI/master/ai.finto.fi/static/img/finto-ai-social.png">
-  
+
     <style>
       body {
         background-color: #80d5e9;
@@ -413,6 +413,9 @@
         <div class="alert alert-danger d-none" id="alert-textract-request-failed" data-i18n="alert-textract-request-failed">
           Tekstin haku epäonnistui.
         </div>
+        <div class="alert alert-danger d-none" id="alert-textract-request-failed-url" data-i18n="alert-textract-request-failed-url">
+          Tekstin haku epäonnistui. Kohteen koko max. 6 MB. Ei uudelleenohjauksia.
+        </div>
         <div class="alert alert-danger d-none" id="alert-too-big-file" data-i18n="alert-too-big-file">
           Liian suuri tiedosto; suurin sallittu tiedoston koko on 50 MB
         </div>
@@ -511,15 +514,15 @@
     <script src="static/js/jquery-3.6.1.min.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
 
-    <script src="static/js/jquery.i18n.js"></script>		
+    <script src="static/js/jquery.i18n.js"></script>
     <script src="static/js/jquery.i18n.messagestore.js"></script>
     <script src="static/js/jquery.i18n.fallbacks.js"></script>
     <script src="static/js/jquery.i18n.language.js"></script>
     <script src="static/js/jquery.i18n.parser.js"></script>
-    <script src="static/js/jquery.i18n.emitter.js"></script>	
+    <script src="static/js/jquery.i18n.emitter.js"></script>
     <script src="static/js/jquery.i18n.emitter.bidi.js"></script>
     <script src="static/js/jquery.history.js"></script>
-    <script src="static/js/url.min.js"></script> 
+    <script src="static/js/url.min.js"></script>
 
     <script src="static/js/annif.js"></script>
     <script src="static/js/i18n.js"></script>
