--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -160,10 +160,10 @@
     #input-url::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
       color: #5D7999;
     }
-    #text:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    #input-url:-ms-input-placeholder { /* Internet Explorer 10-11 */
       color: #5D7999;
     }
-    #text::-ms-input-placeholder { /* Microsoft Edge */
+    #input-url::-ms-input-placeholder { /* Microsoft Edge */
       color: #5D7999;
     }
     #button-select-url {
